--- a/js/index.html
+++ b/js/index.html
@@ -1,7 +1,9 @@
 <html>
     <head>
+        <script src="//aframe.io/releases/0.5.0/aframe.min.js"></script>
     </head>
     <body>
-        <script src='main.js' type='text/javascript'></script>
+        <div id='container'></div>
+        <script src='vid_main.js' type='text/javascript'></script>
     </body>
 </html>
